--- a/assemblypoints.html
+++ b/assemblypoints.html
@@ -64,7 +64,7 @@
       </tr>
       <tr align="center">
         <td><a href="https://goo.gl/maps/rv3RLg1HckBmjsvn9">عرض الموقع</a></td>
-        <td><a href="files/JeddahN.pdf">عرض التفاصيل</a></td>
+        <td><a href="files/Jeddah.pdf">عرض التفاصيل</a></td>
         <td>جدة</td>
       </tr>
       <tr align="center">
